RESOLVED FIXED164736
[CSS Parser] Fix font-synthesis and text-decoration-skip parsing
https://bugs.webkit.org/show_bug.cgi?id=164736
Summary [CSS Parser] Fix font-synthesis and text-decoration-skip parsing
Dave Hyatt
Reported 2016-11-14 15:31:37 PST
[CSS Parser] Fix font-synthesis and text-decoration-skip parsing
Attachments
Patch (19.44 KB, patch)
2016-11-14 15:34 PST, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-11-14 15:34:36 PST
Dean Jackson
Comment 2 2016-11-14 15:37:53 PST
Comment on attachment 294761 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294761&action=review > Source/WebCore/ChangeLog:6 > + https://bugs.webkit.org/show_bug.cgi?id=164736 > + > + Reviewed by NOBODY (OOPS!). You should probably explain what was broken and how you are fixing.
Dave Hyatt
Comment 3 2016-11-15 08:57:43 PST
Fixed in r208733.
Note You need to log in before you can comment on or make changes to this bug.