[CSS Parser] Fix font-synthesis and text-decoration-skip parsing https://bugs.webkit.org/show_bug.cgi?id=164736

Reviewed by Dean Jackson.

Source/WebCore:

Fix the properties to not allow duplicate values, to reject when
garbage values are included, to require that none be a singleton,
and to preserve the declaration order of the properties.

* css/StyleBuilderConverter.h:
(WebCore::StyleBuilderConverter::convertTextDecorationSkip):
* css/parser/CSSParser.cpp:
(WebCore::CSSParser::parseFontSynthesis):
(WebCore::CSSParser::parseTextDecorationSkip):
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeFontSynthesis):
(WebCore::consumeTextDecorationSkip):
(WebCore::CSSPropertyParser::parseSingleValue):

LayoutTests:

* fast/css3-text/css3-text-decoration/text-decoration-skip/text-decoration-skip-roundtrip-expected.txt:
* fast/css3-text/css3-text-decoration/text-decoration-skip/text-decoration-skip-roundtrip.html:
* fast/css3-text/font-synthesis-parse-expected.txt:
* fast/css3-text/font-synthesis-parse.html:



Canonical link: https://commits.webkit.org/182447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208733 268f45cc-cd09-0410-ab3c-d52691b4dbfc